--- a/style.css
+++ b/style.css
@@ -1,230 +1,180 @@
-* {
+body {
     margin: 0;
     padding: 0;
     outline: none;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-  }
+}
 
-  html{
-      font-size: medium;
-  }
-
-  .container{
-      display: none;
-  }
-
-  .display.container{
-      display: block;
-  }
-  
-  .pokemon{
-      width: 3rem;
-      /* Relative to font-size of the root element*/
-      height: 3rem;
-      position: fixed;
-      top: 5rem;
-      right: 5rem;
-      z-index: 200;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      cursor: pointer;
-      transition: right 0.7s;
-  }
-
-  .change.pokemon{
-      right: 33rem;
-
-  }
-
-  .line{
-      width: 100%;
-      height: 0.2rem;
-      background-color: darkslateblue;
-      box-shadow: darkslategrey;
-  }
-
-  .change .line-1 {
-    transform: rotate(45deg) translate(0.3rem, 0.8rem);
-  }
-  
-  .change .line-2 {
-    opacity: 0;
-    visibility: hidden;
-  }
-  
-  .change .line-3 {
-    transform: rotate(-45deg) translate(0.3rem, -0.8rem);
-  }
-
-  .pokemon span{
-      position: absolute;
-      left: 5rem;
-      width: 10rem;
-      height: 4rem;
-      background-color: goldenrod;
-      display: flex;
-      justify-self: center;
-      align-items: center;
-      color: greenyellow;
-      font-family: 'Times New Roman', Times, serif;
-      font-size: medium;
-      letter-spacing: 0px;
-      opacity: 0;
-      visibility: hidden;
-      transition: all 0.2s;
-
-  }
-
-  .change .pokemon:hover span{
-      opacity: 1;
-      visibility: visible;
-  }
-
-  .pokemon span::before{
-      content: " ";
-      position: absolute;
-      border-left: 1rem solid transparent;
-      border-right: 1rem solid #e2b646;
-      border-bottom: 1rem solid transparent;
-      border-top: 1rem solid transparent;
-      top: 50%;
-      left: -2rem;
-      transform: translateY(-50%);
-  }
-  
-  .header{
-      width: 100%;
-      height: 100vh;
-      position: relative;
-      perspective: 100rem;
-      overflow: hidden;
-
-  }
-  .img{
-      width: 100%;
-      height: 100%;
-      background-color: hotpink;
-      overflow: hidden;
-  }
+html{
+  font-size: medium;
+}
 
 
-  .img img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 0.5;
-      animation: scale 25s;
-  }
+.op{
+  background-color: aquamarine;
+  font-size: medium;
+  font-style: normal;
+  opacity: 1;
+  text-align: center;
+} 
 
-  .banner{
-      position:absolute;
-      top: 30%;
-      left: 15%;
-  }
+.imaage{
+  width: "100";
+  height: "100";
+}
 
-  .banner h1{
-      font-family: 'Times New Roman', Times, serif;
-      font-size: 8rem;
-      font-weight: 300;
-      color: #fff;
-      width: 50%;
-      line-height: 9rem;
-      letter-spacing: 0.2rem;
-      text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
-      opacity: 0;
-      animation: moveBanner 1s 0.5s forwards;
-  }
+.contai {
+  display: grid;
+  height: 100%;
+  background-size: cover;
+ 
 
-  
-  .banner p {
-      
-      font-family: "Josefin Slab", serif;
-      font-size: 4rem;
-      color: #fff;
-      width: 70%;
-      letter-spacing: 0.1rem;
-      margin-bottom: 3rem;
-      text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
-      opacity: 0;
-      animation: moveBanner 1s 0.7s forwards;
+
 }
 
 
 
-  .sidebar {
-    width: 40rem;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: -40rem;
-    background-color: #fff;
-    transition: right 0.5s;
-    z-index: 100;
-  }
+
+
   
-  .change .sidebar {
-    right: 0;
+.header{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  perspective: 100rem;
+  overflow: hidden;
+
+}
+.img{
+  width: 100%;
+  height: 100%;
+ 
+  overflow: hidden;
+}
+
+
+.img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 1;
+  animation: scale 25s;
+}
+
+.banner{
+  position:absolute;
+  top: 10%;
+  left: 10%;
+}
+
+.banner h1{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 5rem;
+  font-weight: 250;
+  color: #fff;
+  width: 50%;
+  line-height: 5rem;
+  /* letter-spacing: 0.2rem; */
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+  opacity: 1;
+  animation: moveBanner 1s 0.5s forwards;
+}
+
+.banner p {
+      
+  font-family: "Josefin Slab", serif;
+  font-size: 1.5rem;
+  color: #fff;
+  width: 60%;
+  letter-spacing: 0.1rem;
+  margin-bottom: 4rem;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+  opacity: 1;
+  animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner button {
+  width: 20rem;
+  height: 5rem;
+  background-color: #1e2024;
+  border: none;
+  font-family: "Muli", serif;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #fff;
+  text-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  opacity: 0;
+  animation: moveBanner 1s 0.9s forwards;
+}
+
+@keyframes moveBanner {
+  0% {
+    transform: translateY(40rem) rotateY(-20deg);
   }
-  
-  .menu {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  100% {
+    transform: translateY(0) rotateY(0);
+    opacity: 1;
   }
-  
-  .item {
-    text-align: center;
-  }
-  
-  .menu-link {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 4rem;
-    color: #555;
-    position: relative;
-  }
-  
-  .menu-link::before {
-    content: attr(data-content);
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #c29525;
-    width: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    transition: width 0.3s ease-in-out;
-  }
-  
-  .menu-link:hover::before {
-    width: 100%;
-  }
-  
-  .social-media {
-    position: absolute;
-    bottom: 3rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .social-media i {
-    font-size: 2.2rem;
-    margin: 3rem;
-    width: 4.5rem;
-    height: 4.5rem;
-    background-color: #777;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: background-color 0.3s;
-  }
-  
-  .social-media i:hover {
-    background-color: #c29525;
-  }
+}
+
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 200px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#ma{
+  position:relative;
+  width:100px;
+  height:100px;
+
+  left:1px;
+  top:0px;
+  z-index: 1;
+}
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 0px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+ @media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;} 
+} 
