--- a/style.css
+++ b/style.css
@@ -29,16 +29,9 @@ html{
   display: grid;
   height: 100%;
   background-size: cover;
- 
-
 
 }
 
-
-
-
-
-  
 .header{
   width: 100%;
   height: 100vh;
@@ -139,7 +132,7 @@ html{
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #fffbfb;
   display: block;
   transition: 0.3s;
 }
@@ -177,4 +170,118 @@ html{
  @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;} 
-} 
+ }
+
+ .bg-modal{
+  width: 100%;
+  height:100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+
+ }
+
+ .modal-content{
+  width:550px;
+  height:400px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  position: relative;
+ }
+
+ input{
+  width: 50%;
+  height: 24px;
+  box-shadow: 1px 1px   #818181;
+  display: block;
+  margin: 15px auto;
+ }
+
+ .close{
+  position: absolute;
+  top:0;
+  left: 20px;
+  font-size: 40px;
+  transform: rotate(45deg);
+  cursor: pointer;
+ }
+
+ .button{
+  background-color: #ebab36; /* Green */
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5%;
+ }
+
+ .button:hover{
+  background-color: black;
+  color: #ebab36;
+  
+  
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+ }
+
+
+.acolumn{
+  float: left;
+  width: auto;
+  margin-bottom: 16px;
+  padding: 0 8px;
+
+}
+
+@media screen and (max-width: 650px) {
+  .acolumn{
+    width: 100%;
+    display: block;
+  }
+  
+}
+
+.card{
+  box-shadow: #1e2024;
+  
+}
+
+
+.team{
+  padding: 0 16px;
+  text-align: center;
+  text-decoration: solid;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.team::after, .arow::after{
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.abutton{
+  border: none;
+  outline: #000;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover{
+  background-color: indianred;
+}
