--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    
 }
 
 html{
@@ -12,20 +14,7 @@ html{
 }
 
 
-.op{
-  background-color: aquamarine;
-  font-size: medium;
-  font-style: normal;
-  opacity: 1;
-  text-align: center;
-} 
-
-.imaage{
-  width: "100";
-  height: "100";
-}
-
-.contai {
+.const {
   display: grid;
   height: 100%;
   background-size: cover;
@@ -56,9 +45,23 @@ html{
   animation: scale 25s;
 }
 
+.nitl{
+  width: 10%;
+  height: 10%;
+  padding-left: 60%;
+  
+  position: relative;
+  padding-bottom: 20%;
+  border-radius: 50%;
+  
+}
+
+
+
+
 .banner{
   position:absolute;
-  top: 10%;
+  top: 20%;
   left: 10%;
 }
 
@@ -172,116 +175,32 @@ html{
   .sidenav a {font-size: 18px;} 
  }
 
- .bg-modal{
-  width: 100%;
-  height:100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: none;
-
- }
-
- .modal-content{
-  width:550px;
-  height:400px;
-  background-color: white;
-  border-radius: 4px;
-  text-align: center;
-  position: relative;
- }
-
- input{
-  width: 50%;
-  height: 24px;
-  box-shadow: 1px 1px   #818181;
+ .icon {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.icon a {
   display: block;
-  margin: 15px auto;
- }
-
- .close{
-  position: absolute;
-  top:0;
-  left: 20px;
-  font-size: 40px;
-  transform: rotate(45deg);
-  cursor: pointer;
- }
-
- .button{
-  background-color: #ebab36; /* Green */
-  border: none;
-  color: white;
-  padding: 8px 16px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 5%;
- }
-
- .button:hover{
-  background-color: black;
-  color: #ebab36;
-  
-  
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
- }
-
-
-.acolumn{
-  float: left;
-  width: auto;
-  margin-bottom: 16px;
-  padding: 0 8px;
-
-}
-
-@media screen and (max-width: 650px) {
-  .acolumn{
-    width: 100%;
-    display: block;
-  }
-  
-}
-
-.card{
-  box-shadow: #1e2024;
-  
-}
-
-
-.team{
-  padding: 0 16px;
-  text-align: center;
-  text-decoration: solid;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-.team::after, .arow::after{
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.abutton{
-  border: none;
-  outline: #000;
-  display: inline-block;
-  padding: 8px;
+  padding: 16px;
+  transition: all 0.3s ease;
   color: white;
+  font-size: 20px;
+}
+
+/* Style the social media icons with color, if you want */
+.icon a:hover {
   background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
 }
 
-.button:hover{
-  background-color: indianred;
+.facebook {
+  background: #3B5998;
+  color: white;
+}
+.insta {
+  background: #55ACEE;
+  color: white;
 }
