Modal Bug fixed Images renamed and arranged logo centered facebook and insta link added

--- a/styleAbout.css
+++ b/styleAbout.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("5-dots.png");
+    background-image: url("images/congruent_outline.png");
     background-repeat: repeat;
     color:white;
     font-family:'Roboto', sans-serif;
