--- a/style.css
+++ b/style.css
@@ -204,3 +204,65 @@ html{
   background: #55ACEE;
   color: white;
 }
+
+/* css for modal  */
+.bg-modal
+{
+  width:100%;
+  height:100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.modal-content{
+  width:550px;
+  height:400px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  position: relative;
+}
+input{
+  width: 50%;
+  height: 24px;
+  box-shadow: 1px 1px   #818181;
+  display: block;
+  margin: 15px auto;
+}
+.close
+{
+  position: absolute;
+  top:0;
+  left: 20px;
+  font-size: 40px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  
+}
+.button
+{ 
+  background-color: #ebab36; /* Green */
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5%;
+}
+.button:hover
+{
+  background-color: black;
+  color: #ebab36;
+  
+  
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
